# bubblepolicy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TESTING.md  collapse-rules.md  flake.nix  opencode-policy.json  opencode-trace.json  package.nix  policy.json  session-ses_30a5.md  test_bubblepolicy.sh  test_myjail.sh  trace.json
.github/workflows/: build.yml
man/md/: bubblepolicy-create.md  bubblepolicy-optimise.md  bubblepolicy-review-ui.md  bubblepolicy-review.md  bubblepolicy-trace.md  bubblepolicy.md
src/: common.rs  create.rs  lib.rs  main.rs  optimise.rs  review.rs  review_ui.rs  scan.rs  template.sh  trace.rs
src/tree_widget/: mod.rs
strace-open-parser/: Cargo.toml
strace-open-parser/src/: lib.rs
strace-open-parser/tests/: integration.rs
strace-open-parser/tests/fixtures/: sample_output.txt
test_data/: trace_mixed.json  trace_mixed_access.json  trace_nested.json  trace_rule2.json  trace_tree.json
tests/: integration.rs  review_ui.rs
tests/snapshots/: review_ui__render_tree.snap
