[package]
name = "bubblepolicy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.9"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strace-open-parser = { path = "./strace-open-parser" }
tempfile = "3.14"

[dependencies.ratatui]
version = "0.30"
default-features = false
features = ["crossterm", "std"]

[workspace]
members = ["strace-open-parser"]
